--- a/websitecss.css
+++ b/websitecss.css
@@ -1,156 +1,140 @@
-<style>
+* {
+    margin: 0px;
+    padding: 0px;
+}
 
-.logo{
+a {
+    color: #846C63;
+    text-decoration: none;
+}
+
+.logo {
+
+    color: #88AAA;
+    height: 60px;
+    padding: 0px 200px;
+}
+
+.top-logo a {
+    margin: 0px 10px;
+    color: #88AAA9;
+}
+
+.top-logo .bar {
+	float: right;
+	margin-top: 20px;
+	margin-right: 200px;
 	display: inline-block;
-	color: #88AAA;
-    height: 50px;
-    line-height: 50px;
-    width: 100%
-   
 }
-
-.logo a {
-	text-align: center;
-	text-decoration: none;
-	margin: 0px 20px;
+.top-logo .bar li{
 	display: inline-block;
-	
 }
 
-.top-logo {
-	padding-left: 15%;
-   	padding-right: 15%;
-}
-
-.bar{
-	width:90%;
-	height: 90%;
-}
-
-
-
-.logo ul{
-	overflow: hidden;
-}
-
-.logo li:hover{
-
-	background-color: #BDB1AD;
+.top-logo .bar li:hover {
+    background-color: #BDB1AD;
     color: white;
-
-}
-
-.logo ul li{
-	float: right;
-	list-style: none;
-	padding-right: 4px;
-	padding-left: 4px;
-
-}
-
-.background {
-	width: 100%; height: 100%; background: #EEEEEE; padding :3px;
-
-}
-
-.about_adbeus p {
-	font-size: 13px;
-}
-
-.about_adbeus a{
-	text-decoration: none;
-}
-
-.title{
-	margin:4px;
-	padding: 4px;
-}
-
-.main{
-	width:100%;
-	height: 100%;
-	background-color: #F6F4F1;
-}
-
-a{
-	text-decoration: none;
-}
-
-.tab{
-	box-shadow: 2px 2px 10px #cccccc;
-	border-collapse: collapse;
-	background-color: white;
-
-}
-
-.col{
-	margin-left: 150px;
-	padding: none;
-}
-
-hr{
-	box-shadow: 1px 1px;
-}
-
-.join-adbeus{
-	display: inline-block;
-	float: right;
-	margin-right: 100px;
 }
 
 
-table{
-	display: inline-block;
-	margin-left: 30px;
-	margin-right: 10px;
-	box-shadow: 2px 2px 1px;
-	border:0;
+/*body*/
 
+.main {
+    background-color: #F6F4F1;
+    padding: 0px;
 }
 
-.big{
-	margin-bottom: 50px;
+.tableTitle {
+    margin: 0px 30px;
+}
+
+.col {
+    margin: 0px 300px;
+    padding: none;
+}
+
+.tab {
+    background-color: white;
+    display: inline-block;
+    margin: 20px;
+}
+
+table {
+    display: inline-block;
+    width: 200px;
+    height: 300px;
+}
+
+.card img {
+    width: 100%;
+}
+
+.title {
+    margin: 4px;
+    padding: 4px;
+}
+
+.post table {
+    width: 300px;
+    height: 400px;
+}
+
+.card-content {
+    margin: 10px;
+}
+
+.join-adbeus {
+    display: inline-block;
+    float: right;
+    margin-right: 100px;
+}
+
+.join-adbeus .button {
+    padding: 15px 10px;
+    background-color: #26a69a;
+    border-radius: 4px;
+    margin-top: 50px;
+    display: inline-block;
+}
+
+.join-adbeus .button a {
+    color: white;
 }
 
 
-.footer-bottom{
-	margin-top: 50px;
-	background-color: rgba(189,177,173,0.1);
-	width: 100%;
-	height:500px;
+/* footer */
+
+.footer-bottom {
+    margin-top: 50px;
+    background-color: rgba(189, 177, 173, 0.1);
+    width: 100%;
+    height: 500px;
 }
 
-.footer-menu{
-	width: calc(100%/4);
-	float: left;
-}
-
-.footer-menu p{
-	color: #846C63;
-	font-size: 16px;
-	margin-bottom: 15px;
-	margin-top: 0;
-	text-transform: uppercase;
-}
-
-.footer-menu ul{
-
-	margin-bottom: 15px;
-}
-
-.footer-menu ul li{
-	color:black;
-	margin: 5px;
-	list-style-type: none;
-	font-size: 14px;
-	cursor: pointer;
+.footer-menu {
+    width: calc(100%/4);
+    float: left;
 }
 
 .footer-menu p {
-	margin-left: 30px;
+    color: #846C63;
+    font-size: 16px;
+    margin-bottom: 15px;
+    margin-top: 0;
+    text-transform: uppercase;
 }
 
-.tableTitle{
-	margin-left: 50px;
+.footer-menu ul {
+    margin-bottom: 15px;
 }
-</style>
+
+.footer-menu ul li {
+    color: black;
+    margin: 5px;
+    list-style-type: none;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.footer-menu p {
+    margin-left: 30px;
+}
